test_case/rust-lang_rust/72273_633266831.rs

    //~| ERROR wrong number of const arguments: expected 1, found 0
    //~| ERROR wrong number of type arguments: expected 0, found 1
